oauth imgur 첨부파일 기능
* 날짜 지정이 안되고 있음

--- a/src/main/resources/mail/template/new-note.html
+++ b/src/main/resources/mail/template/new-note.html
@@ -1,6 +1,7 @@
 <html>
 <body>
 <p>{{name}}님에게 새로운 쪽지가 왔습니다</p>
-<p>보낸 사림: {{sender}}</p>
+<p>내용: {{content}}</p>
+<p>보낸 사람: {{sender}}</p>
 </body>
 </html>
