--- a/src/main/webapp/resources/css/myPage.css
+++ b/src/main/webapp/resources/css/myPage.css
@@ -3,3 +3,14 @@
     background-color: #e5ffbb;
     font-weight: bold;
 }
+
+.cate-item button {
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    transform: translateY(-50%);
+    outline: none;
+    border: none;
+    border-radius: 10px;
+    padding: .4rem 1rem;
+}
